--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -1,5 +1,9 @@
 name: nix
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  schedule:
+    - cron: "0 9 * * *" # daily lockfile update PR
 jobs:
   check:
     runs-on: ubuntu-latest
@@ -8,4 +12,26 @@ jobs:
       - uses: cachix/install-nix-action@v27
         with:
           extra_nix_config: experimental-features = nix-command flakes
-      - run: nix flake check
+      - name: Enable Cachix (pull cache; push iff token provided)
+        if: ${{ secrets.CACHIX_AUTH_TOKEN != '' }}
+        uses: cachix/cachix-action@v15
+        with:
+          name: mangano
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      - name: Format check
+        run: nix fmt -- --check
+      - name: Flake checks
+        run: nix flake check --print-build-logs
+      - name: Pre-commit hooks (optional)
+        run: nix build .#packages.x86_64-linux.pre-commit-check
+        continue-on-error: true
+
+  update-lock:
+    if: github.event_name == 'schedule'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: DeterminateSystems/update-flake-lock@v24
+        with:
+          pr-title: "chore: update flake.lock"
+          pr-labels: dependencies
