ci: fix conditional by referencing env.CACHIX_AUTH_TOKEN instead of secrets in step if

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -7,17 +7,19 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
+    env:
+      CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
     steps:
       - uses: actions/checkout@v4
       - uses: cachix/install-nix-action@v27
         with:
           extra_nix_config: experimental-features = nix-command flakes
       - name: Enable Cachix (pull cache; push iff token provided)
-        if: ${{ secrets.CACHIX_AUTH_TOKEN != '' }}
+        if: ${{ env.CACHIX_AUTH_TOKEN != '' }}
         uses: cachix/cachix-action@v15
         with:
           name: mangano
-          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+          authToken: ${{ env.CACHIX_AUTH_TOKEN }}
       - name: Format check
         run: nix fmt -- --check
       - name: Flake checks
